--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.13",
     "autoprefixer": "10.4.14",
+    "google-map-react": "^2.2.1",
+    "google-maps": "^4.3.3",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^4.10.1",
+    "swiper": "^10.0.3",
     "tailwindcss": "3.3.2"
   }
 }
